test/corpus/assignments.txt
================================================================================
assignment simple
================================================================================
$foo = 123
--------------------------------------------------------------------------------
(manifest
  (statement
    (variable
      (name))
    (operator)
    (number)))

================================================================================
assignment function
================================================================================
$foo = match(123)
--------------------------------------------------------------------------------
(manifest
  (statement
    (variable
      (name))
    (operator)
    (function_call
      (name)
      (argument_list
        (argument
          (number))))))

================================================================================
assignment float
================================================================================
$foo = 123.45
--------------------------------------------------------------------------------
(manifest
  (statement
    (variable
      (name))
    (operator)
    (number)))

================================================================================
assignment scientific number
================================================================================
$foo = 42e6
--------------------------------------------------------------------------------
(manifest
  (statement
    (variable
      (name))
    (operator)
    (number)))

================================================================================
assignment local variable
================================================================================
$_foo = 123
--------------------------------------------------------------------------------
(manifest
  (statement
    (variable
      (name))
    (operator)
    (number)))

================================================================================
assignment reference
================================================================================
$foo = Test['asdf']
--------------------------------------------------------------------------------
(manifest
  (statement
    (variable
      (name))
    (operator)
    (type
      (classref))
    (access_arg
      (string))))

================================================================================
assignment absolute scope
================================================================================
$::foo = 123
--------------------------------------------------------------------------------
(manifest
  (statement
    (variable
      (name))
    (operator)
    (number)))
