test/corpus/expressions-boolean.txt
================================================================================
expression boolean or
================================================================================
true or false
--------------------------------------------------------------------------------
(manifest
  (statement
    (binary
      (true)
      (false))))

================================================================================
expression boolean equals
================================================================================
'foo' == 'bar'
--------------------------------------------------------------------------------
(manifest
  (statement
   (binary
     (single_quoted_string)
     (single_quoted_string))))

================================================================================
expression boolean match
================================================================================
'foobar' =~ /foo/
--------------------------------------------------------------------------------
(manifest
  (statement
    (binary
      (single_quoted_string)
      (regex))))

================================================================================
expression boolean in
================================================================================
'Solaris' in ['Linux', 'Solaris']
--------------------------------------------------------------------------------
(manifest
  (statement
    (binary
      (single_quoted_string)
    (array
      (array_element
        (single_quoted_string))
      (array_element
        (single_quoted_string))))))

================================================================================
expression boolean numeric
================================================================================
90 < 7
--------------------------------------------------------------------------------
(manifest
  (statement
    (binary
      (number)
      (number))))

================================================================================
expression boolean unary
================================================================================
!true
--------------------------------------------------------------------------------
(manifest
  (statement
    (unary
      (true))))

================================================================================
boolean expressions
================================================================================
1 in [1,2,3]

$x = true and false

$y = ((true and 1) and false)
--------------------------------------------------------------------------------
(manifest
  (statement
    (binary
      (number)
      (array
        (array_element
          (number))
        (array_element
          (number))
        (array_element
          (number)))))
  (statement
    (variable
      (name))
    (binary
      (true)
      (false)))
  (statement
    (variable
      (name))
    (binary
      (binary
        (true)
        (number))
      (false))))

================================================================================
boolean parsed as function name
:error
================================================================================
true and false
((true and 1) and false)
--------------------------------------------------------------------------------
