test/corpus/regex.txt
================================================================================
regex
================================================================================
/^[123]$/
--------------------------------------------------------------------------------
(manifest
  (statement
    (regex)))

================================================================================
regex with escaped slash
================================================================================
/foo\/bar/
--------------------------------------------------------------------------------
(manifest
  (statement
    (regex)))

================================================================================
regex with quote
================================================================================
/"/
--------------------------------------------------------------------------------
(manifest
  (statement
    (regex)))

================================================================================
regex with capture
================================================================================
if $size =~ /^([0-9]+(\.[0-9]+)?)([KMGTPEkmgtpe])/ {
}
--------------------------------------------------------------------------------
(manifest
  (statement
    (if
      (binary
        (variable
          (name))
        (operator)
        (regex))
      (block))))
