test/corpus/resource-collectors.txt
================================================================================
resource collectors simple
================================================================================
Foo::Bar <||>
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_collector
      (type)
      (collect_query))))

================================================================================
resource collectors simple exported
================================================================================
Foo::Bar <<||>>
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_collector
      (type)
      (collect_query))))

================================================================================
resource collectors with condition
================================================================================
Foo::Bar <| $i > 123 |>
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_collector
      (type)
      (collect_query
        (binary
          (variable
            (name))
          (number))))))

================================================================================
resource collectors exported with condition
================================================================================
Foo::Bar <<| tag == 'foo' |>>
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_collector
      (type)
      (collect_query
        (binary
          (name)
          (single_quoted_string))))))

================================================================================
resource collectors with arguments
================================================================================
Foo::Bar <| |> {
  ensure => present,
}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_collector
      (type)
      (collect_query)
      (attribute_list
        (attribute
          (name)
          (arrow)
          (name))))))

================================================================================
resource collectors with empty arguments
================================================================================
Foo::Bar <| |> {}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_collector
      (type)
      (collect_query))))

================================================================================
resource collectors exported with arguments
================================================================================
Foo::Bar <<| |>> {
  ensure => present
}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_collector
      (type)
      (collect_query)
      (attribute_list
        (attribute
          (name)
          (arrow)
          (name))))))

================================================================================
resource collectors exported with empty arguments
================================================================================
Foo::Bar <<| |>> { }
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_collector
      (type)
      (collect_query))))
