test/corpus/resource-reference.txt
================================================================================
reference
================================================================================
Group[$foo::group]
--------------------------------------------------------------------------------
(manifest
  (statement
    (type
      (classref))
    (access
      (access_element
        (variable
          (name))))))
