test/corpus/resource-scope.txt
================================================================================
identifier top scope
================================================================================
::asdf {'asdf':}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (name)
      (resource_body
        (resource_title
          (string))))))

================================================================================
identifier top scope with package
================================================================================
::asdf::asdf {'asdf':}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (name)
      (resource_body
        (resource_title
          (string))))))

================================================================================
identifier relative with package
================================================================================
asdf::asdf {'asdf':}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (name)
      (resource_body
        (resource_title
          (string))))))

================================================================================
identifier relative
================================================================================
asdf {'asdf':}
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (name)
      (resource_body
        (resource_title
          (string))))))
