test/corpus/string-interpolation.txt
================================================================================
string with interpolation
================================================================================
"/usr/${test}/var"
--------------------------------------------------------------------------------
(manifest
  (statement
    (string
      (interpolation))))

================================================================================
string with multiple interpolations
================================================================================
"/usr/${test}/${var}"
--------------------------------------------------------------------------------
(manifest
  (statement
    (string
      (interpolation)
      (interpolation))))

================================================================================
string with interpolation without braces
================================================================================
"/usr/$test/var"
--------------------------------------------------------------------------------
(manifest
  (statement
    (string
      (interpolation))))

================================================================================
string with interpolation explicit sigil
================================================================================
"test${$foo}"
--------------------------------------------------------------------------------
(manifest
  (statement
    (string
      (interpolation))))

================================================================================
string with interpolation hash
================================================================================
"test${foo['test']['bar']}"
--------------------------------------------------------------------------------
(manifest
  (statement
    (string
      (interpolation))))

================================================================================
string with interpolation with absolute variable without sigil
================================================================================
"test ${::foo}"
--------------------------------------------------------------------------------
(manifest
  (statement
    (string
      (interpolation))))

================================================================================
string with escaped dollar character
================================================================================
"test \$foo"
--------------------------------------------------------------------------------
(manifest
  (statement
    (string)))

================================================================================
single quoted string with content looking like interpolation
================================================================================
'test ${foo}'
--------------------------------------------------------------------------------
(manifest
  (statement
    (string)))
