test/corpus/strings.txt
================================================================================
string with single quotes
================================================================================
'string'
'foo-bar/asdf'
--------------------------------------------------------------------------------
(manifest
  (statement
    (string))
  (statement
    (string)))

================================================================================
string with double quotes
================================================================================
"string"
--------------------------------------------------------------------------------
(manifest
  (statement
    (string)))

================================================================================
string with escape sequence
================================================================================
"foo\"bar"
--------------------------------------------------------------------------------
(manifest
  (statement
    (string)))

================================================================================
string with escape sequence single quote
================================================================================
'moe\'s bar'
--------------------------------------------------------------------------------
(manifest
  (statement
    (string)))

================================================================================
string with single underscore
================================================================================
'_'
--------------------------------------------------------------------------------
(manifest
  (statement
    (string)))

================================================================================
string with literal backslash single quote
================================================================================
'foo\bar'
--------------------------------------------------------------------------------
(manifest
  (statement
    (string)))

================================================================================
string with escaped newline
================================================================================
"foo\
bar"
--------------------------------------------------------------------------------
(manifest
  (statement
    (string)))
