test/corpus/virtual-and-exported-resources.txt
================================================================================
virtual resources
================================================================================
@foo::bar { 'test': }
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (virtual)
      (name)
      (resource_body
        (resource_title
          (string))))))

================================================================================
exported resources
================================================================================
@@foo::bar { 'test': }
--------------------------------------------------------------------------------
(manifest
  (statement
    (resource_type
      (exported)
      (name)
      (resource_body
        (resource_title
          (string))))))
